fix: font tweaking

--- a/warranty.html
+++ b/warranty.html
@@ -149,10 +149,10 @@
 
   <div class="mt-40 mb-16 px-4">
     <div class="max-w-4xl md:max-w-xl lg:max-w-5xl xl:max-w-6xl 2xl:max-w-6xl mx-auto text-center">
-      <h1 class="text-3xl md:text-4xl lg:text-5xl 2xl:text-6xl font-light tracking-[0.25em] uppercase mb-4">
+      <h1 class="text-3xl md:text-4xl lg:text-5xl 2xl:text-5xl font-light tracking-[0.25em] uppercase mb-4">
         WARRANTY
       </h1>
-      <p class="text-base md:text-xl lg:text-2xl xl:text-[1.75rem] 2xl:text-3xl font-light">
+      <p class="text-base md:text-xl lg:text-1xl xl:text-lg 2xl:text-2xl font-light">
         As piece of mind for you, all of our vehicles up to 10 years at purchase date will automatically include
         a comprehensive Gold level warranty cover with no annual millage restrictions. You will be able to make
         unlimited number of claims for duration of your policy. The policy will also include a labour charge
