--- a/index.html
+++ b/index.html
@@ -235,6 +235,9 @@
                     </div>
 
                 </div>
+
+                <!-- Mobile full-card clickable overlay -->
+                <a href="finance.html" class="md:hidden absolute inset-0 z-30"></a>
             </div>
 
             <!-- Sell Your Car Card -->
